--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 body {
     position: absolute;
     width: 70%;
-    top: 25%;
+    top: 20%;
     left: 0;
     right: 0;
     margin: auto;
@@ -20,15 +22,15 @@ body {
 
   p {
     font-size:30px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Patrick Hand', sans-serif;
     font-weight: 500;
   }
   
   cite {
     font-size:20px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Alata', sans-serif;
     color: #3F3B3B;
-    font-weight: 500;
+    font-weight: 4 00;
   }
 
 
@@ -80,7 +82,7 @@ ul li a .fab {
 }
 
 ul li:nth-child(1) a:hover .fab {
-  color: #3b5998;
+  color: #983b3b;
 }
 
 ul li:nth-child(2) a:hover .fab {
@@ -88,15 +90,27 @@ ul li:nth-child(2) a:hover .fab {
 }
 
 ul li:nth-child(3) a:hover .fab {
-  color: #dd4b39;
+  color: #3952dd;
 }
 
 ul li:nth-child(4) a:hover .fab {
-  color: #007bb6;
+  color: #6d00b6;
 }
 
 ul li:nth-child(5) a:hover .fab {
-  color: #e4405f;
+  color: #cb40e4;
+}
+
+ul li:nth-child(6) a:hover .fab {
+  color: #e44040;
+}
+
+ul li:nth-child(7) a:hover .fab {
+  color: #005515;
+}
+
+ul li:nth-child(8) a:hover .fab {
+  color: #34a853;
 }
 
 .clock {
